feat: admin panel, budget breach notifier, DB migrations, marketing site
- Add AdminController/AdminService + React admin UI (dashboard, users, login)
- Add BudgetBreachNotifier for proactive budget alerts
- DB migrations V13-V16, V18: category icons, cashback, login attempts, user roles
- Multi-user auth hardening: UserRepository, AuthService, SecurityConfig, UserDetailsServiceImpl
- Updates across Merchant, Statement, Budget, Savings, Category, QA services
- Add Astro.js marketing-site with full page set (home, pricing, about, blog, etc.)
- Add stitch analytics v2 design assets
- .gitignore: exclude .gradle/ and backend-java/build/

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>